# MediaFlow

./: .gitignore  LICENSE  PROJECT_PROGRESS.md  README.md  build_app.sh  project_description.md  run.sh
backend/: .env.example  alembic.ini  mediaflow-server.spec  pyproject.toml  requirements.txt  run_server.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: analytics.py  cloud.py  collections.py  filter_presets.py  health.py  library.py  logs.py  notifications.py  plex.py  presets.py  recommendations.py  router.py  servers.py  settings.py  tags.py  transcode.py  watch_folders.py  webhooks.py  websocket.py
backend/app/models/: __init__.py  app_settings.py  cloud_cost.py  custom_tag.py  filter_preset.py  job_log.py  media_item.py  notification_config.py  notification_log.py  plex_library.py  plex_server.py  recommendation.py  server_benchmark.py  transcode_job.py  transcode_preset.py  watch_folder.py  webhook_source.py  worker_server.py
backend/app/schemas/: __init__.py  analytics.py  cloud.py  collection.py  common.py  filter_preset.py  media.py  notification.py  plex.py  recommendation.py  server.py  tag.py  transcode.py  watch_folder.py  webhook.py
backend/app/services/: analytics_service.py  benchmark_service.py  cloud_provisioning_service.py  collection_service.py  library_service.py  notification_service.py  plex_service.py  preset_seeder.py  provisioning_service.py  recommendation_service.py  report_service.py  transcode_service.py  vultr_client.py  worker_service.py
backend/app/utils/: ffmpeg.py  ffprobe.py  (+5 more)
(+85 files in other folders)
