[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mediaflow-backend"
version = "1.0.0"
description = "MediaFlow - Plex Media Library Optimizer Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "cryptography>=41.0.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
ssh = ["asyncssh>=2.14.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx"]
